--- a/index1.html
+++ b/index1.html
@@ -116,7 +116,7 @@
                     <div id="Amy" class="collapse">
                         <p class="text-center">主唱</p>
                         <p class="text-center">2000-2-28</p>
-                        <p class="text-center"></p>
+                        <p class="text-center">啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊</p>
                     </div>
                 </div>
                 <div class="col-sm-4">
@@ -127,7 +127,7 @@
                     <div id="Tom" class="collapse">
                         <p class="text-center">吉他手</p>
                         <p class="text-center">2003-2-28</p>
-                        <p class="text-center"></p>
+                        <p class="text-center">啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊</p>
                     </div>
                 </div>
                 <div class="col-sm-4">
@@ -138,7 +138,7 @@
                     <div id="Susan" class="collapse">
                         <p class="text-center">贝斯</p>
                         <p class="text-center">2004-2-28</p>
-                        <p class="text-center"></p>
+                        <p class="text-center">啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊</p>
                     </div>
                 </div>
             </div>
@@ -197,7 +197,6 @@
             </div>
         </div>
         <br><br>
-
         <div class="modal fade" id="myModal" role="dialog">
             <div class="modal-dialog">
                 <div class="modal-content">
@@ -259,6 +258,7 @@
                     </div>
                     <div class="row">
                         <div class="col-md-12 form-group ">
+                            <button class="btn btn-dark" type="submit">发送</button>
                             <button class="button button1 pull-right " type="submit"">发送</button>
                         </div>
                     </div>
@@ -272,18 +272,12 @@
                             var map = new BMap.Map("baiduMap");
                             map.centerAndZoom(new BMap.point(114.309531, 30.569619), 50);
                             map.addControl(new BMap.MapTypeControl());
-                            map.setCurrentCity("武汉");
+                            map.setCurrentCity("北京");
                             map.enableScrollWheelZoom(true); 
                         </script>
 
                         <!-- 页脚 -->
-                        <footer class="text-center bg-dark">
-                            <a class="up-arrow" href="#myPage" data-target="tooltip" title="TO TOP">
-                                <span class="glyphicon glyphicon-chevron-up"></span>
-                            </a>
-                            <br>
-                        </footer>
-
+                    
                         <script>
                             //创建find函数
                             function find() {
